fix z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,7 @@
   max-height: 756px;
   background-color: #f2f2f2;
   margin-bottom: 100px;
+  z-index: -3;
 }
 
 .header__square-pic {
@@ -66,7 +67,7 @@
   background: #2f80ed;
   width: 568px;
   height: 568px;
-  z-index: 0;
+  z-index: -2;
 }
 
 .logo_place_header {
@@ -85,6 +86,7 @@
   line-height: 96px;
   font-size: 102px;
   font-weight: 500;
+  z-index: 1;
 }
 
 .header__subtitle {
@@ -96,13 +98,14 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+  z-index: 1;
 }
 
 .header__main-illustration {
   position: absolute;
   right: 0;
   bottom: 0;
-  z-index: 1;
+  z-index: -1;
 }
 
 .link {
@@ -144,7 +147,7 @@
   font-size: 24px;
 }
 
-.description p:last-child {margin-bottom: 0;} /* убираем отступ у посленего абзаца */
+.description p:last-child {margin-bottom: 0;} /* убираем отступ у последнего абзаца */
 
 .description__span-accent {
   font-weight: 500;
@@ -228,6 +231,7 @@
   padding-bottom: 90px;
   overflow: hidden;
   background-color: #1f1f1f;
+  z-index: -2;
 }
 
 .kaufman__title {
@@ -238,6 +242,7 @@
   font-size: 60px;
   width: 60%;
   font-weight: 500;
+  z-index: 1;
 }
 
 .kaufman__subtitle {
@@ -248,11 +253,12 @@
   font-size: 24px;
   font-weight: normal;
   width: 60%;
+  z-index: 1;
 }
 
 .kaufman__triangle {
   position: absolute;
-  z-index: 1;
+  z-index: -1;
   top: 0;
   right: -210px;
 }
